# wuxing_color_engine

./: .gitignore  README.md  bazi_calculator.py  compare_scoring_models.py  core_scoring.py  core_scoring_v2.py  date_energy_calculator.py  main.py  pyproject.toml  requirements.txt  web.py
static/css/: app.css
static/js/: app.js
templates/: index.html
